src/components/Templates/SimpleModal/SimpleModal.scss
@use "constants/styles";
@use "constants/colors";
@use "sass:color";

.simple-modal {
  position: relative;
  display: flex;
  flex-direction: column;
  gap: styles.$spacing--xl;

  padding: 40px styles.$spacing--xl styles.$spacing--xl styles.$spacing--xl;

  border-radius: styles.$rounded--default;
  background-color: styles.$gray--000;

  box-shadow: 0 6px 32px 0 rgba(colors.$blue--500, 0.26);
}

.simple-modal__header {
  display: flex;
  justify-content: center;
}

.simple-modal__title {
  color: colors.$navy--900;
  font-size: styles.$text--lg;
  font-weight: 700;

  padding-bottom: styles.$spacing--xxs;
  border-bottom: 3px solid colors.$blue--500;
}

.simple-modal__close-button {
  all: unset;
  position: absolute;
  top: styles.$icon--default / -2; // translate by half of its negative size to center at corner
  right: styles.$icon--default / -2;

  display: flex;
  align-items: center;
  justify-content: center;

  width: styles.$icon--default;
  height: styles.$icon--default;
  border-radius: styles.$rounded--full;

  background: colors.$gray--000;
  box-shadow: 0 3px 12px 0 rgba(colors.$blue--500, 0.12);

  cursor: pointer;
  &:hover {
    box-shadow: 0 3px 12px 0 rgba(colors.$blue--500, 0.3);
  }
}

.simple-modal__close-icon {
  color: styles.$blue--500;
}

.simple-modal__main {
  flex: 1;
  overflow-y: auto;
}

.simple-modal__footer {
  display: flex;
  justify-content: flex-end;
  flex-direction: row;
  gap: styles.$spacing--md;
}

@media screen and (max-width: styles.$breakpoint--smartphone) {
  .simple-modal {
    height: 90%;
    width: 85%;
    gap: styles.$spacing--md;

    padding: styles.$spacing--xl styles.$spacing--base styles.$spacing--base styles.$spacing--base;
  }
}

[data-theme="dark"] {
  .simple-modal {
    background-color: styles.$navy--400;

    box-shadow: 0 6px 32px 0 rgba(styles.$blue--400, 0.26);
  }

  .simple-modal__title {
    color: styles.$gray--000;
    border-color: styles.$blue--400;
  }
}

